syntax = "proto3";

option go_package=".";
package pb;

service Chat{
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Stream(stream StreamRequest) returns (stream StreamResponse){};
}

message LoginRequest {
    string username = 1;
    string password = 2;
  }
  
message LoginResponse {
    string token = 1;
  }
  
 message StreamRequest {
    string token = 1;
    string username = 2;
    string message = 3;
  
  }
  
 message StreamResponse {
    string username = 1;
    string message = 2;
  }
  